Lots of IDE refactorings
Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>